0.20.13 - validate referenced attachment publications
